--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -19,3 +19,26 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
+/* Custom Scrollbar */
+::-webkit-scrollbar {
+  @apply w-2 h-2;
+}
+
+::-webkit-scrollbar-track {
+  @apply bg-gray-100 dark:bg-gray-800;
+}
+
+::-webkit-scrollbar-thumb {
+  @apply bg-gray-400 rounded-full hover:bg-gray-500 dark:bg-gray-600 dark:hover:bg-gray-500;
+}
+
+/* PDF Preview */
+iframe {
+  @apply transition-opacity duration-300;
+}
+
+.loading-pdf {
+  @apply opacity-50;
+}
